--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add counter_loop.txt  # This is the file your Python script modifies
+          git add loop_counter.txt  # This is the file your Python script modifies
           git commit -m "Update counter"
           git push origin main
